[gd_scene load_steps=7 format=3 uid="uid://54jegna8r7wy"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_r0ntq"]
[ext_resource type="PackedScene" uid="uid://bdr7j4a0yrlbu" path="res://objects/pickables/light.tscn" id="2_0ylml"]
[ext_resource type="PackedScene" uid="uid://dnukot3s50pwy" path="res://objects/components/hit_box.tscn" id="2_waawj"]

[sub_resource type="SphereMesh" id="SphereMesh_hdwye"]
radius = 0.25
height = 0.5
radial_segments = 16
rings = 8

[sub_resource type="CylinderMesh" id="CylinderMesh_tnjhn"]
top_radius = 0.0
bottom_radius = 0.1
height = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_u708i"]
flip_faces = true
radius = 0.625
height = 1.25
radial_segments = 16
rings = 8

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 32
script = ExtResource("1_r0ntq")
speed = 0.74
_light_scene = ExtResource("2_0ylml")

[node name="AxisPreview" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="AxisPreview"]
mesh = SubResource("SphereMesh_hdwye")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="AxisPreview"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.313503, 0)
mesh = SubResource("CylinderMesh_tnjhn")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="AxisPreview"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.00529191, 0.385038)
mesh = SubResource("CylinderMesh_tnjhn")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="AxisPreview"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.4, -0.000988036, 0)
mesh = SubResource("CylinderMesh_tnjhn")
skeleton = NodePath("../..")

[node name="DamageIndicator" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
visible = false
mesh = SubResource("SphereMesh_u708i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="HitBox" parent="." groups=["Enemy"] instance=ExtResource("2_waawj")]
health = 2.0
damaged_by = &"Player"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="died" from="HitBox" to="." method="_on_hit_box_died"]
[connection signal="health_changed" from="HitBox" to="." method="_on_hit_box_health_changed"]

[editable path="HitBox"]
